--- a/bene-fa/src/index.css
+++ b/bene-fa/src/index.css
@@ -24,11 +24,13 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  padding: 0;
+  width: 100vw;
   min-height: 100vh;
+  overflow-x: hidden;
+  box-sizing: border-box;
 }
+
 
 h1 {
   font-size: 3.2em;
